salesforce/force-app/main/default/objects/Sync_Checkpoint__c/Sync_Checkpoint__c.object-meta.xml
<CustomObject>
    <label>Sync Checkpoint</label>
    <pluralLabel>Sync Checkpoints</pluralLabel>
    <nameField>
        <label>Source Key</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per mailbox/source. Holds the delta token, page cursor and run status for
        DeltaSyncJob. Chosen over Platform Cache deliberately: it survives an org restart and a
        cache eviction, and it is visible in the UI for support — durability was worth more than
        the extra read/write latency of a real object. Written on every page, not just at the end
        of a run, so a mid-run failure resumes rather than restarting.</description>
</CustomObject>