salesforce/force-app/main/default/objects/Sync_Checkpoint__c/fields/Delta_Token__c.field-meta.xml
<CustomField>
    <fullName>Delta_Token__c</fullName>
    <label>Delta Token</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>Opaque continuation token from the mail provider's delta query. Cleared and the mailbox falls back to a full read in the same run when the provider reports it invalid/expired.</description>
</CustomField>