salesforce/force-app/main/default/objects/Sync_Checkpoint__c/fields/Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Error__c</fullName>
    <label>Last Error</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>