salesforce/force-app/main/default/objects/Sync_Checkpoint__c/fields/Last_Run_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_At__c</fullName>
    <label>Last Run At</label>
    <type>DateTime</type>
</CustomField>