salesforce/force-app/main/default/objects/Sync_Checkpoint__c/fields/Page_Cursor__c.field-meta.xml
<CustomField>
    <fullName>Page_Cursor__c</fullName>
    <label>Page Cursor</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <description>Which page this source is currently on within the run. Written after every page commits, so a Queueable chain that dies on page 40 resumes on page 41 rather than starting over.</description>
</CustomField>