salesforce/force-app/main/default/objects/Sync_Checkpoint__c/fields/Records_Synced__c.field-meta.xml
<CustomField>
    <fullName>Records_Synced__c</fullName>
    <label>Records Synced (Last Run)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>