salesforce/force-app/main/default/objects/Sync_Checkpoint__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>idle</fullName><default>true</default><label>Idle</label></value>
            <value><fullName>running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>throttled</fullName><default>false</default><label>Throttled</label></value>
            <value><fullName>skipped</fullName><default>false</default><label>Skipped</label></value>
            <value><fullName>completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>